# KELOMPOK11_PROJECTIOT

./: README.md  README_DS18B20.md  Script_LaTeX_Laporan
CODE/: Cargo.toml  build_script_build-0619debcfce2a08f  build_script_build-0619debcfce2a08f.d  build_script_build-0f12a51d4f9c0400  build_script_build-0f12a51d4f9c0400.d  build_script_build-203c86d0cd3f6fc6  build_script_build-203c86d0cd3f6fc6.d  build_script_build-22f0dda3a1e420de  build_script_build-22f0dda3a1e420de.d  build_script_build-26fe387f49e9be6a  build_script_build-26fe387f49e9be6a.d  build_script_build-2762c319c8bc43df  build_script_build-2762c319c8bc43df.d  build_script_build-28c6b5ac53f625cf  build_script_build-28c6b5ac53f625cf.d  build_script_build-29d99a42dd15d49c  build_script_build-29d99a42dd15d49c.d  build_script_build-2b6bdc99ca0a09d0  build_script_build-2b6bdc99ca0a09d0.d  build_script_build-358cbc9f6ae53f50  build_script_build-358cbc9f6ae53f50.d  build_script_build-3fa72b362ef899c4  build_script_build-3fa72b362ef899c4.d  build_script_build-567b005e303d74ef  build_script_build-567b005e303d74ef.d  build_script_build-60ef8def29d86829  build_script_build-60ef8def29d86829.d  build_script_build-66602603b2cb6723  build_script_build-66602603b2cb6723.d  build_script_build-7c989c79c4dfa1f2  build_script_build-7c989c79c4dfa1f2.d  build_script_build-83a2610eb94119f8  build_script_build-83a2610eb94119f8.d  build_script_build-86dc92dc6732ab9f  build_script_build-86dc92dc6732ab9f.d  build_script_build-88072a7726998315  build_script_build-88072a7726998315.d  build_script_build-8c65f54496ab8e78  (+27 more)
GNUPLOT/: SCRIPT
